--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
- "start": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node utils/seedData.js"  },
-  
+    "seed": "node utils/seedData.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
